# bvedge

./: .gitignore  Cargo.toml  README.md
bvedge-cli/: Cargo.toml
bvedge-cli/src/: main.rs
bvedge-core/: Cargo.toml
bvedge-core/src/models/: atacformer.rs  embedding.rs  loader.rs  mod.rs  registry.rs  weight_mapper.rs
